--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Rasmus Zweidorff Iversen",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "ts-node": "^7.0.1"
-  }
+  },
+  "dependencies": {}
 }
