--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "outDir": "dist",
+    "rootDir": "./",
     "sourceMap": true,
     "baseUrl": "./src",
     "paths": {
