--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "lint": "./node_modules/.bin/tslint --project .",
     "test": "./node_modules/.bin/mocha -r ts-node/register src/test/**/*.spec.ts",
-    "start": "./node_modules/.bin/ts-node ./src/main/main.js"
+    "start": "./node_modules/.bin/ts-node ./src/main/main.ts"
   },
   "author": "Rasmus Zweidorff Iversen",
   "license": "ISC",
