--- a/package.json
+++ b/package.json
@@ -15,19 +15,30 @@
     "@app": "./dist/src/main/app"
   },
   "devDependencies": {
+    "@types/ajv": "^1.0.0",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
+    "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.12",
     "@types/rx": "^4.1.1",
     "chai": "^4.2.0",
+    "gulp": "^4.0.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-print": "^5.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-tap": "^1.0.1",
+    "gulp-typescript": "^5.0.0",
     "mocha": "^5.2.0",
+    "replace-in-file": "^3.4.2",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typemoq": "^2.1.0"
+    "typemoq": "^2.1.0",
+    "typescript-json-schema": "^0.33.0",
+    "upath": "^1.1.0"
   },
   "dependencies": {
-    "@types/minimist": "^1.2.0",
+    "ajv": "^6.6.1",
     "express": "^4.16.4",
     "minimist": "^1.2.0",
     "module-alias": "^2.1.0",
