Some changes to ci/cd setup

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@types/rx": "^4.1.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.0.1",
-    "gulp-print": "^5.0.0",
-    "gulp-replace": "^1.0.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-tap": "^1.0.1",
+    "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0",
     "mocha": "^5.2.0",
     "replace-in-file": "^3.4.2",
