--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ install:
   - npm install
 
 script:
-  ./node_modules/.bin/gulp lint
-  ./node_modules/.bin/gulp build
-  ./node_modules/.bin/gulp test
+  ./node_modules/.bin/gulp travis
 
 cache:
   directories:
