Trying out using npm instead of gulp

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "experimentalDecorators": true,
     "rootDir": "./",
     "sourceMap": true,
-    "baseUrl": "./src",
+    "baseUrl": "./src/",
     "paths": {
       "@app/*": [
         "main/app/*"
