--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ env:
   - NODE_ENV=production
 
 script:
-  - npm lint
-  - npm build
-  - npm test
+  - npm run lint
+  - npm run build
+  - npm run test
 
 cache:
   directories:
