--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
     - develop
 
 install:
-  - npm ci
+  - npm install
 
 env:
   - NODE_ENV=production
@@ -21,4 +21,4 @@ script:
 
 cache:
   directories:
-    - node_modules
+    - "$HOME/.npm"
