Travis build conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ install:
   - npm install
 
 script:
-  - npm run lint
-  - npm run build
-  - npm run test
+  - npm run lint && npm run build && npm run test
 
 cache:
   directories:
