--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Rasmus Zweidorff Iversen",
   "license": "ISC",
   "devDependencies": {
+    "@fluffy-spoon/substitute": "^1.0.66",
     "@types/ajv": "^1.0.0",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
@@ -30,6 +31,7 @@
     "gulp-typescript": "^5.0.0",
     "mocha": "^5.2.0",
     "replace-in-file": "^3.4.2",
+    "ts-mockito": "^2.3.1",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.11.0",
