--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
 script:
   - npm run lint && npm run build && npm run test
 
+after_success:
+  - codecov
+
 cache:
   directories:
     - node_modules
