--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,12 +7,12 @@ coverage:
   round: down
   range: "70...100"
 
-status:
-  project: yes
-  patch: yes
-  changes: no
+  status:
+    project: yes
+    patch: yes
+    changes: no
 
 comment:
-  layout: “reach, diff, flags, files, footer”
+  layout: "reach, diff, flags, files, footer"
   behavior: default
   require_changes: no
