--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.12",
+    "@types/request": "^2.48.1",
     "@types/rx": "^4.1.1",
     "chai": "^4.2.0",
     "codecov": "^3.1.0",
@@ -30,8 +31,10 @@
     "gulp-tap": "^1.0.1",
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "replace-in-file": "^3.4.2",
+    "request": "^2.88.0",
     "ts-mockito": "^2.3.1",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
