--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node ./node_modules/typescript/bin/tsc",
     "lint": "node ./node_modules/tslint/bin/tslint --project ./tslint.json",
     "test": "node ./node_modules/mocha/bin/_mocha -r ./node_modules/ts-node/register -r ./node_modules/tsconfig-paths/register ./src/test/**/*.spec.ts",
-    "start": "node -r ./node_modules/ts-node/register -r ./node_modules/tsconfig-paths/register ./src/main/main.ts --load-scenario ./res/scenarios/scenario-1.json"
+    "start": "node -r ./node_modules/ts-node/register -r ./node_modules/tsconfig-paths/register ./src/main/main.ts"
   },
   "author": "Rasmus Zweidorff Iversen",
   "license": "ISC",
